[package]
name = "repository"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = [
    "chrono",
    "postgres",
    "runtime-tokio-native-tls",
] }
postgres = "0.19.12"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = "0.4.42"

thiserror = "2.0.17"
